<resources>
    <string name="app_name">MyTodoApp</string>
    <string name="undo">Undo</string>
    <string name="deleted">Deleted </string>
    <string name="no_todo_found">No TODO Found</string>
    <string name="title">Title</string>
    <string name="time">Add TODO timer</string>
    <string name="todo_item">Add TODO Item</string>
    <string name="todolist">TODO List</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sync_now">Sync Now</string>
    <string name="settings">Settings</string>
    <string name="click_here_to_set_time">Click here to set time</string>
    <string name="no_todo_added">No TODO added</string>
    <string name="service_title">My TODO</string>
    <string name="service_summary">My TODO APP is running in the background</string>

    <!--    Toast Message-->
    <string name="toast_add_one_task_error">Please add at least one TODO Task</string>
    <string name="toast_min_diff_error">Minimum time difference must be 5 minutes</string>
    <string name="toast_cant_back_past_error">Whoa!You can\'t go back to the past</string>
    <string name="toast_pick_todo_time_error">Please pick TODO time before proceeding</string>
    <string name="toast_title_blank_error">Title can\'t be blank</string>
    <string name="toast_add_successful">Successfully Added!</string>
    <string name="toast_update_successful">Successfully Updated</string>


    <!-- Preference Titles -->
    <string name="messages_header">Night Mode</string>
    <string name="sync_header">Auto Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Night Mode</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync TODO Data periodically</string>
    <string name="sync_title_label">Auto Sync</string>
    <string name="sync_default_value">12 Hour</string>
    <string name="sync_summary_on">Automatically will be synced with the remote data</string>
    <string name="sync_summary_off">Remote data will not be synced automatically</string>
    <string name="expire_soon_notification">Your todo will be expiring soon</string>
    <string name="select_sync_period">Tap here to select Auto Sync period</string>
    <string name="data_sync_successful">Data synced successfully</string>
    <string name="sync_notification_title">Time to sync</string>
    <string name="sync_notification_body">Tap here to sync your todo data</string>
    <string name="no_internet_toast">No Internet Connection</string>
    <string name="label_mytodo">MyTODO</string>
    <string name="label_add_todo">Create a new TODO</string>
    <string name="label_update_todo">Update your TODO</string>

</resources>