<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="night_mode"
            app:title="@string/signature_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">


        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="sync"
            app:summaryOff="@string/sync_summary_off"
            app:summaryOn="@string/sync_summary_on"
            app:title="@string/sync_title_label" />
        <ListPreference
            app:dependency="sync"
            app:entries="@array/time"
            app:entryValues="@array/time_values"
            app:key="sync_value"
            app:summary="@string/select_sync_period"
            app:title="@string/sync_title_label" />
    </PreferenceCategory>
</PreferenceScreen>