<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/todoListFragment">

    <action
        android:id="@+id/action_global_update_fragment"
        app:destination="@id/updateFragment"
        app:launchSingleTop="true" />
    <fragment
        android:id="@+id/todoListFragment"
        android:name="com.example.mytodoapp.ui.fragments.TodoListFragment"
        android:label="@string/label_mytodo"
        tools:layout="@layout/fragment_todolist">
        <action
            android:id="@+id/action_listFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_todoListFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_todoListFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.mytodoapp.ui.fragments.AddFragment"
        android:label="@string/label_add_todo"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/todoListFragment"
            app:popUpTo="@id/todoListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.mytodoapp.ui.fragments.UpdateFragment"
        android:label="@string/label_update_todo"
        tools:layout="@layout/fragment_update">
        <action
            android:id="@+id/action_updateFragment_to_listFragment"
            app:destination="@id/todoListFragment"
            app:popUpTo="@id/todoListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.mytodoapp.ui.fragments.SettingsFragment"
        android:label="SettingsFragment">
        <action
            android:id="@+id/action_settingsFragment_to_todoListFragment"
            app:destination="@id/todoListFragment" />
    </fragment>

</navigation>