<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/dimen_24dp"
    tools:context=".ui.fragments.AddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:paddingStart="@dimen/dimen_24dp"
        android:paddingEnd="@dimen/dimen_24dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/textinput_default_box_stroke_color"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@drawable/textcolor_edittext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:paddingStart="@dimen/dimen_24dp"
        android:paddingEnd="@dimen/dimen_24dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/textinput_default_box_stroke_color"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_clock"
            android:drawablePadding="@dimen/dimen_8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@drawable/textcolor_edittext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addTodoItem"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:hint="@string/todo_item"
        android:paddingStart="@dimen/dimen_24dp"
        android:paddingEnd="@dimen/dimen_24dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/textinput_default_box_stroke_color"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addTodoItemET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_add_24"
            android:drawablePadding="@dimen/dimen_8dp"
            android:ems="10"
            android:imeActionLabel="@string/add"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@drawable/textcolor_edittext"
            app:endIconMode="clear_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoListRv"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:background="@drawable/item_bg"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTodoItem" />

    <TextView
        android:id="@+id/noToDoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_todo_added"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTodoItem"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>